examples/test/testpolicy6279.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6279
  namespace: namespace136
spec:
  podSelector:
    matchLabels:
      key22: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value6
          key49: value47
          key37: value25
      podSelector:
        matchLabels:
          key23: value8
